# chess

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  README.md  build.rs  linting.sh  package-lock.json  package.json  start.sh  todo.md
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  deploy-to-pages.yml
.specify/: feature.json
.specify/integrations/: gemini.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
benches/: move_gen.rs
benchmarks/: benchmark.rs
chess/: .gitignore  Cargo.toml
chess/src/: lib.rs  wasm.rs
chess/www/: index.js
examples/: profile_search.rs
scripts/: lint.sh  serve.sh
specs/: bugs.md  todo.md
specs/001-move-generation-core/: research.md  tasks.md
specs/003-pawn-special-moves/: spec.md
specs/004-game-history-storage/: spec.md
specs/005-game-replay/: spec.md
specs/006-game-info-cards/: spec.md
specs/007-game-end-dialog/: spec.md
specs/008-3d-display-mode/: spec.md
specs/009-engine-improvement/: plan.md  spec.md  tasks.md
specs/010-cloud-ai-integration/: plan.md  spec.md
specs/011-move-history-panel/: spec.md
specs/012-configurable-skins/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-3d-model-viewer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs  wasm.rs
src/ai/: evaluation.rs  greedy.rs  mod.rs  move_ordering.rs  profiler.rs  search.rs  transposition.rs
src/board/: bitboard.rs  mod.rs  piece.rs  (+3 more)
tests/: lib.rs
www/: game.js  index.html  index.js  serve.sh  storage.js  ui.js
(+111 files in other folders)
