[package]
name = "chess_core"
version = "0.1.0"
edition = "2021"
authors = ["Chess Core Team"]
description = "High-performance chess move generation and logic engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/your-username/chess_core"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Storage", "console"] }
chrono = "0.4"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "move_gen"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]
